重要通知：20.答案有误，现已经更正并添加过程供检查

--- a/大物B上/CH17.md
+++ b/大物B上/CH17.md
@@ -2,7 +2,7 @@
 
 ### KEY IDEA：
 
-1.本题：飞机从A点发出声音，B点开始计时，34.5秒内飞机飞过BC距离，求的是BD。
+1.本题：飞机从A点发出声音，B点开始计时，35.4秒内飞机飞过BC距离，求的是BD。
 
 ![img](../.image\17-20.jpg)
 
@@ -20,5 +20,15 @@
 ### Calculation
 
 - 自然 本题就是解三角形问题
+
 - 求出θ，再根据BF的长度来求BD
-- 答案：6744.61
+
+  Vplane = 2 * Vsound= 660 , BF = Vplane * t = 23364.0m
+
+  sinθ = 0.5 -> θ = 30°
+
+  BD = BF   / tanθ = 13489.211689346417 m = 13489.21 m
+
+- 答案：（已修正）
+
+- <font color='red'> 13489.211689346417 </font>
